--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </p>
                     </div>
                     <div>
-                        <img src="https://d3eh3svpl1busq.cloudfront.net/YbdbVFWJAObPrqMCaJgzyDObUVvCRocQ/assets/desktop/optimized/rev-bdd290c/geougc/AF1QipNhxDSpbNS3r8v2h-9BYRR0wImCerypiGZslLOZ=h400-no" alt="Air Conditioning Contractor New Braunfels, TX">
+                        <img style="box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px; border-radius: 35px;" src="https://d3eh3svpl1busq.cloudfront.net/YbdbVFWJAObPrqMCaJgzyDObUVvCRocQ/assets/desktop/optimized/rev-bdd290c/geougc/AF1QipNhxDSpbNS3r8v2h-9BYRR0wImCerypiGZslLOZ=h400-no" alt="Air Conditioning Contractor New Braunfels, TX">
                     </div>
                 </div>
                 <p>
@@ -97,7 +97,7 @@
                 <br>
                 <div class="two-col">
                     <div>
-                        <img style="height: 350px;" src="https://d3eh3svpl1busq.cloudfront.net/YbdbVFWJAObPrqMCaJgzyDObUVvCRocQ/assets/static/optimized/rev-bdd290c/wp-myfavoriteservicecompany/wp-contents/uploads/2022/08/25052416/Furnace-Services-Timberwood-Park.jpg" alt="Air Conditioning Contractor New Braunfels, TX">
+                        <img style="height: 350px; box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px; border-radius: 35px;" src="https://d3eh3svpl1busq.cloudfront.net/YbdbVFWJAObPrqMCaJgzyDObUVvCRocQ/assets/static/optimized/rev-bdd290c/wp-myfavoriteservicecompany/wp-contents/uploads/2022/08/25052416/Furnace-Services-Timberwood-Park.jpg" alt="Air Conditioning Contractor New Braunfels, TX">
                     </div>
                     <div>
                         <p>
@@ -153,7 +153,7 @@
                         </p>
                     </div>
                     <div>
-                        <img src="https://d3eh3svpl1busq.cloudfront.net/YbdbVFWJAObPrqMCaJgzyDObUVvCRocQ/assets/static/optimized/rev-bdd290c/wp-myfavoriteservicecompany/wp-contents/uploads/2022/08/25055202/MFSC_AC-Repair-Hollywood-Park-TX_Service-Page.jpg" alt="Air Conditioning Contractor New Braunfels, TX">
+                        <img style="box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px; border-radius: 35px;" src="https://d3eh3svpl1busq.cloudfront.net/YbdbVFWJAObPrqMCaJgzyDObUVvCRocQ/assets/static/optimized/rev-bdd290c/wp-myfavoriteservicecompany/wp-contents/uploads/2022/08/25055202/MFSC_AC-Repair-Hollywood-Park-TX_Service-Page.jpg" alt="Air Conditioning Contractor New Braunfels, TX">
                     </div>
                 </div>
             </section>
@@ -254,9 +254,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/myfavoriteservicecompany-08-22/">https://rank-fortress-digital-agency.github.io/myfavoriteservicecompany-08-22/</a><br>
-                <a target="_bLank" href="http://myfavoriteservicecompany-08-22.s3-website-us-east-1.amazonaws.com">http://myfavoriteservicecompany-08-22.s3-website-us-east-1.amazonaws.com</a><br>
-                <a target="_bLank" href="https://glowing-souffle-615151.netlify.app/">https://glowing-souffle-615151.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/myfavoriteservicecompany-09-22/">https://rank-fortress-digital-agency.github.io/myfavoriteservicecompany-09-22/</a><br>
+                <a target="_bLank" href="http://myfavoriteservicecompany-09-22.s3-website-us-east-1.amazonaws.com">http://myfavoriteservicecompany-09-22.s3-website-us-east-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://chipper-griffin-5c15bb.netlify.app/">https://chipper-griffin-5c15bb.netlify.app/</a><br>
                 <a target="_bLank" href="https://sites.google.com/view/myfavoriteservicecompany/">https://sites.google.com/view/myfavoriteservicecompany/</a><br>
             </section>
 
